feat:amelioration UI, construction dynamique playlist aléatoire, réglage de bugs